# talloc

./: .clang-tidy  CMakeLists.txt  LICENSE.txt  README.md  talloc.c
include/talloc/: binary-tree.h  container.h  hash.h  ref-tree.h  reference.h  status.h  talloc.h
src/: binary-tree.c  hash.c  ref-tree.c  reference.c  status.c  talloc.c  test-main.c
src/evaluation/: 1-alloc-normal.c  1-alloc-talloc.c  1a-alloc-normal.c  1a-alloc-talloc.c  2-access-normal.c  2-access-talloc.c  3-patch.c  test-main.c
tests/: binary-tree.c  status.c
